clang/test/CIR/IR/invalid-const-record.cir
// RUN: cir-opt %s -verify-diagnostics -split-input-file

!s32i = !cir.int<s, 32>
!rec_anon_struct = !cir.struct< packed {!s32i, !s32i, !cir.array<!s32i x 8>}>

// expected-error @below {{expected !cir.struct or !cir.union type}}
cir.global external @e = #cir.const_record<{#cir.int<1> : !s32i, #cir.int<2> : !s32i, #cir.zero : !cir.array<!s32i x 8>}> : !cir.ptr<!rec_anon_struct>

// -----

!s32i = !cir.int<s, 32>
!rec_anon_struct = !cir.struct< packed {!s32i, !s32i, !cir.array<!s32i x 8>}>

// expected-error @below {{number of elements must match}}
cir.global external @e = #cir.const_record<{#cir.int<1> : !s32i, #cir.zero : !cir.array<!s32i x 8>}> : !rec_anon_struct

// -----

!s32i = !cir.int<s, 32>
!rec_anon_struct = !cir.struct< packed {!s32i, !s32i, !cir.array<!s32i x 8>}>

// expected-error @below {{element at index 1 has type '!cir.float' but the expected type for this element is '!cir.int<s, 32>'}}
cir.global external @e = #cir.const_record<{#cir.int<1> : !s32i, #cir.fp<2.000000e+00> : !cir.float, #cir.zero : !cir.array<!s32i x 8>}> : !rec_anon_struct

// -----

!s32i = !cir.int<s, 32>
!u8i = !cir.int<u, 8>
!rec_U = !cir.union<"U" {!s32i, !u8i}, padding = {!cir.array<!u8i x 3>}>

// A union constant must have exactly one element (the active member).
// expected-error @below {{union constant must have exactly one element, got 2}}
cir.global external @u = #cir.const_record<{#cir.int<5> : !s32i, #cir.int<7> : !u8i}> : !rec_U

// -----

!s32i = !cir.int<s, 32>
!u8i = !cir.int<u, 8>
!rec_U = !cir.union<"U" {!s32i, !u8i}, padding = {!cir.array<!u8i x 3>}>

// expected-error @below {{union constant must have exactly one element, got 0}}
cir.global external @u = #cir.const_record<{}> : !rec_U

// -----

!s32i = !cir.int<s, 32>
!u8i = !cir.int<u, 8>
!rec_U = !cir.union<"U" {!s32i, !u8i}, padding = {!cir.array<!u8i x 3>}>

// The single element's type must be one of the union's member types.
// expected-error @below {{union element type '!cir.float' is not a member of}}
cir.global external @u = #cir.const_record<{#cir.fp<2.000000e+00> : !cir.float}> : !rec_U
